--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,18 @@ textarea {
    ========================================================================== */
 
 
-
+.spinner {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	margin-left: -32px; /* half width of the spinner gif */
+	margin-top: -32px; /* half height of the spinner gif */
+	text-align:center;
+	z-index:2000;
+	overflow: hidden;
+	width: 64px; /* width of the spinner gif */
+	height: 66px; /*height of the spinner gif +2px to fix IE8 issue */
+}
 
 
 
